# the_lab

./: .env.example  .gitignore  CLAUDE.md  Todo.md  docker-compose.yml  project_charter.md  readme.md
.github/workflows/: backend.yml  frontend.yml
agents/: agents.md  architect.md  backend.md  code_reviewer.md  designer.md  devops.md  frontend.md  github-workflow.md  orchestrator.md  planner.md  qa_specialist.md  security_reviewer.md
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 858417da6351_initial_schema.py
backend/scripts/: README.md  __init__.py  seed_db.py
backend/src/the_lab/: __init__.py  config.py  logging.py  main.py  middleware.py
backend/src/the_lab/auth/: __init__.py  dependencies.py  jwt.py  password.py  router.py
backend/src/the_lab/db/: __init__.py  base.py  enums.py  session.py
backend/src/the_lab/db/models/: __init__.py  catalog.py  core.py  journal.py  session.py  sets.py
backend/src/the_lab/schemas/: __init__.py  auth.py  base.py
backend/tests/: README.md  conftest.py  test_app.py  test_auth_dependency.py  test_catalog_models.py  test_config_security.py  test_core_models.py  test_cors.py  test_db_infrastructure.py  test_enums.py  test_fixtures_example.py  test_health.py  test_jwt.py  test_login.py  test_password.py  test_register.py  test_request_logging.py  test_sample.py  test_schemas_base.py  test_session_models.py  test_sets_models.py  test_settings.py
backend/tests/fixtures/: __init__.py  assertions.py  factories.py
docs/: claude-code-installation-status.md  reqs.md  the_lab_v0_5.sql
docs/adr/: adr-001-modular-monolith-architecture.md  adr-002: Data Modeling Philosophy.md  adr-003-api-style-rest-first.md  adr-004-authentication-and-authorization-baseline.md  adr-005: Testing Strategy.md  adr-006: Postgres as System of Record.md  adr-007: Avoid Premature Distributed Systems.md  adr-008-workout-data-domain-philosophy.md  adr-009-development-tooling.md
frontend/: eslint.config.js  jest.config.ts  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.test.tsx  main.tsx
frontend/src/hooks/: useExample.ts
